CHANGES IN FLTK 1.3.0

	- Fixed a Windows GDI leak when testing alpha blending capabilities
	- Fixed a name conflict with new (VC 2008 Express) winsock2.h
	  versions and another conflict that produced compile errors
	  with VC 2008 (STR #2301).
	- Widgets now remove stale entries from the default callback
	  queue when they are deleted (STR #2302)
	- Moved OS X code base to the more moder Cocoa toolkit thanks
	  to the awesome work of Manolo Gouy (STR #2221)
	- Added template to generate new projects with Xcode.
	- Managing all Widget flags in a single location now (STR #2161)
	- Fixed all color related call to Fl_Color type (STR #2208)
	- File chooser preview now recognizes utf8 encoded 
	  text files (STR #2218)
	- Empty functions in Fluid no longer create an
	  implementation (STR #2259)
	- Fixed Fluid dependency on X11 (STR #2261)
	- Updated the bundled libpng to v1.2.40 (released Sep. 10, 2009)
	- Fixed Fl_Choice contrast with light-on-dark settings (STR #2219)
	- Fixed X server "lock", if a modal dialog window is opened
	  while a menu is active (STR #1986)
	- Updated mirror sites in documentation (STR #2220)
	- Setting a default font for Xft (STR #2216)
	- Temporarily limited builds to 32-bit on OX S to stay
	  compatible to Snow Leopard
	- Fixed Windows compile bug with "#define USE_COLORMAP 0"
	  (STR #2241)
	- Fixed glibc 2.10 compiler problems (Fedora 11 and others)
	  with scandir() and strchr() (STR #2222)
	- Corrected const methods of Fl_Text_{Buffer|Display|Selection}
	  to be declared const, corrected an Fl_Text_Buffer attrib. typo
	- Fixed OpenGL shared context handling (STR #2135)
	- Fixed gray-scale images with alpha channel (STR #2105)
	- Fixed unexpected shortcut behavior for Win32 (STR #2199)
	- Fixed documentation for Fl_Progress (STR #2209)
	- Fluid printing used wrong colors under Windows (STR #2195)
	- Updated documentation for Fl_Input_
	- Fixed fl_draw_image to obey the alpha channel, hoping that 