@@ -1,9 +1,10 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed a buffer overflow in fl_utf8from_mb() (STR #2279)
 	- Fixed a Windows GDI leak when testing alpha blending capabilities
-	- Fixed a name conflict with new (VC 2008 Express) winsock2.h
+	- Fixed a name conflict with new (VS 2008 Express) winsock2.h
 	  versions and another conflict that produced compile errors
-	  with VC 2008 (STR #2301).
+	  with VS 2008 Express (STR #2301)
 	- Widgets now remove stale entries from the default callback
 	  queue when they are deleted (STR #2302)
 	- Moved OS X code base to the more moder Cocoa toolkit thanks
